@@ -1,0 +1,10 @@
+Title: Fixed possible "maximum recursion depth exceeded" error when sorting tables with a lot of text in cells
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i3
+Date: 1480940237
+
+
