@@ -60,6 +60,7 @@
     * 4071 FIX: Removed notes_url from "LOG *" logwatch services...
     * 4072 FIX: Fixed multiple issues in BI availability when groups or names contain umlauts
     * 4080 FIX: Fixed possible exception "unsupported operand type" in matrix views
+    * 4127 FIX: Fixed possible "maximum recursion depth exceeded" error when sorting tables with a lot of text in cells
 
     WATO:
     * 3984 Permissions can now be filtered by providing a search term on the "edit role" page...
